[feat/#13] 대댓글 기능 구현 Step 1: DB 스키마 변경 (Oracle)
- [x] board_comment 테이블에 parent_id 컬럼 추가

- [x]  parent_id에 Self Referencing 외래키(FK) 설정
---

Step 2: Backend - Entity & Repository 수정

- [x] CommentEntity에 parent(ManyToOne), children(OneToMany) 필드 추가

- [x] CommentRepository에 최상위(부모가 null인) 댓글만 조회하는 메서드 추가
---

Step 3: Backend - DTO & Service 로직 구현

- [x] CommentRequestDTO: 부모 ID(parentId) 필드 추가

- [x] CommentResponseDTO: 자식 댓글 목록(children) 필드 추가 및 변환 로직 작성

- [x]  CommentService: 대댓글 저장 및 계층형 조회 로직 구현