@@ -18,6 +18,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -26,7 +27,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 @Slf4j
-public class BoardCommentImpl implements BoardCommentService{
+public class BoardCommentImpl implements BoardCommentService {
 
     private final BoardCommentRepository commentRepository;
     private final BoardRepository boardRepository;
@@ -34,9 +35,9 @@ public class BoardCommentImpl implements BoardCommentService{
     private final CommentLikeRepository commentLikeRepository;
     private final NotificationService notificationService;
 
-    private MemberEntity getCurrentMember(){
+    private MemberEntity getCurrentMember() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if(authentication == null || !authentication.isAuthenticated() || "anonymousUser".equals(authentication.getPrincipal())){
+        if (authentication == null || !authentication.isAuthenticated() || "anonymousUser".equals(authentication.getPrincipal())) {
             return null;
         }
         String username = authentication.getName();
@@ -46,72 +47,86 @@ public class BoardCommentImpl implements BoardCommentService{
 
     @Override
     public List<CommentResponseDTO> getCommentList(Long boardId) {
-
         MemberEntity currentMember = getCurrentMember();
 
-        List<BoardCommentEntity> comments = commentRepository.findByBoardIdAndNotDeleted(boardId);
+        List<BoardCommentEntity> comments = commentRepository.findRootCommentsByBoardId(boardId);
 
-        return comments.stream().map(comment -> convertToDTO(comment,currentMember)).collect(Collectors.toList());
+        List<BoardCommentEntity> sortedComments = comments.stream()
+                .sorted(Comparator.comparing(BoardCommentEntity::getCommentId).reversed())
+                .toList();
+
+        if (!sortedComments.isEmpty()) {
+            log.info("ID 역순 정렬 후 첫번째 댓글 ID: {} (가장 큰 숫자여야 함)", sortedComments.get(0).getCommentId());
+        }
+
+        return sortedComments.stream()
+                .map(comment -> convertToDTO(comment, currentMember))
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public CommentResponseDTO createComment(Long boardId, CommentRequestDTO requestDTO){
+    public CommentResponseDTO createComment(Long boardId, CommentRequestDTO requestDTO) {
         MemberEntity member = getCurrentMember();
-        if(member ==null){
+        if (member == null) {
             throw new IllegalStateException("로그인이 필요합니다.");
         }
-        BoardEntity board = boardRepository.findById(boardId).orElseThrow(()-> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
+        BoardEntity board = boardRepository.findById(boardId).orElseThrow(() -> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
 
-        BoardCommentEntity comment =BoardCommentEntity.builder()
+        BoardCommentEntity.BoardCommentEntityBuilder commentBulider = BoardCommentEntity.builder()
                 .content(requestDTO.getContent())
                 .board(board)
                 .member(member)
                 .deleted(false)
-                .likes(0)
-                .build();
-        BoardCommentEntity savedComment = commentRepository.save(comment);
+                .likes(0);
+        if (requestDTO.getParentId() != null) {
+            BoardCommentEntity parent = commentRepository.findById(requestDTO.getParentId())
+                    .orElseThrow(() -> new IllegalArgumentException("부모 댓글을 찾을 수 없습니다."));
+            commentBulider.parent(parent);
+        }
+        BoardCommentEntity savedComment = commentRepository.save(commentBulider.build());
 
         MemberEntity boardWriter = board.getMember();
-        if(boardWriter.getMemberId() != member.getMemberId()){
+        if (boardWriter.getMemberId() != member.getMemberId()) {
             notificationService.send(
-                    boardWriter,member.getNickname() + "님이 게시글에 댓글을 남겼습니다.",
-                    "/board/"+boardId
+                    boardWriter, member.getNickname() + "님이 게시글에 댓글을 남겼습니다.",
+                    "/board/" + boardId
             );
         }
-        return convertToDTO(savedComment,member);
+        return convertToDTO(savedComment, member);
     }
+
     @Override
     @Transactional
-    public CommentResponseDTO updateComment(Long boardId, Long commentId, CommentRequestDTO requestDTO){
+    public CommentResponseDTO updateComment(Long boardId, Long commentId, CommentRequestDTO requestDTO) {
         MemberEntity member = getCurrentMember();
 
-        if(member == null){
+        if (member == null) {
             throw new IllegalStateException("로그인이 필요합니다.");
         }
 
-        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(()-> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
+        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
 
-        if(comment.getMember().getMemberId() != member.getMemberId()){
+        if (comment.getMember().getMemberId() != member.getMemberId()) {
             throw new IllegalStateException("댓글 수정 권한이 없습니다.");
         }
         comment.setContent(requestDTO.getContent());
 
         BoardCommentEntity updateComment = commentRepository.save(comment);
-        return convertToDTO(updateComment,member);
+        return convertToDTO(updateComment, member);
     }
 
     @Override
     @Transactional
-    public void deleteComment(Long boardId, Long commentId){
+    public void deleteComment(Long boardId, Long commentId) {
         MemberEntity member = getCurrentMember();
 
-        if(member == null){
+        if (member == null) {
             throw new IllegalStateException("로그인이 필요합니다.");
         }
-        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(()-> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
-        if(comment.getMember().getMemberId() != member.getMemberId()){
-            throw  new IllegalStateException("댓글 삭제 권한이 없습니다.");
+        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
+        if (comment.getMember().getMemberId() != member.getMemberId()) {
+            throw new IllegalStateException("댓글 삭제 권한이 없습니다.");
         }
 
         comment.setDeleted(true);
@@ -121,32 +136,32 @@ public class BoardCommentImpl implements BoardCommentService{
 
     @Override
     @Transactional
-    public Boolean toggleLike(Long boardId, Long commentId){
+    public Boolean toggleLike(Long boardId, Long commentId) {
         MemberEntity member = getCurrentMember();
 
-        if(member == null){
+        if (member == null) {
             throw new IllegalStateException("로그인이 필요합니다.");
         }
-        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(()-> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
+        BoardCommentEntity comment = commentRepository.findByCommentIdAndDeletedFalse(commentId).orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
 
-        Optional<CommentLikeEntity> existingLike = commentLikeRepository.findByCommentAndMember(comment,member);
+        Optional<CommentLikeEntity> existingLike = commentLikeRepository.findByCommentAndMember(comment, member);
 
-        if(existingLike.isPresent()){
+        if (existingLike.isPresent()) {
             commentLikeRepository.delete(existingLike.get());
-            comment.setLikes(Math.max(0,comment.getLikes() -1));
+            comment.setLikes(Math.max(0, comment.getLikes() - 1));
             return false;
-        } else{
+        } else {
             CommentLikeEntity like = CommentLikeEntity.builder()
                     .comment(comment)
                     .member(member)
                     .build();
             commentLikeRepository.save(like);
-            comment.setLikes(comment.getLikes()+1);
+            comment.setLikes(comment.getLikes() + 1);
 
             MemberEntity commentWriter = comment.getMember();
-            if(commentWriter.getMemberId() != member.getMemberId()){
+            if (commentWriter.getMemberId() != member.getMemberId()) {
                 notificationService.send(
-                        commentWriter,member.getNickname()+"님이 회원님의 댓글을 좋아합니다.","/board/"+boardId
+                        commentWriter, member.getNickname() + "님이 회원님의 댓글을 좋아합니다.", "/board/" + boardId
                 );
             }
             return true;
@@ -154,13 +169,20 @@ public class BoardCommentImpl implements BoardCommentService{
     }
 
 
-    private CommentResponseDTO convertToDTO(BoardCommentEntity comment, MemberEntity currentMember){
-        boolean isAuthor =currentMember != null && comment.getMember().getMemberId() == currentMember.getMemberId();
+    private CommentResponseDTO convertToDTO(BoardCommentEntity comment, MemberEntity currentMember) {
+        boolean isAuthor = currentMember != null && comment.getMember().getMemberId() == currentMember.getMemberId();
 
         boolean isLiked = false;
-        if(currentMember != null){
-            isLiked = commentLikeRepository.countByCommentAndMember(comment,currentMember) > 0;
+        if (currentMember != null) {
+            isLiked = commentLikeRepository.countByCommentAndMember(comment, currentMember) > 0;
         }
+
+
+        List<CommentResponseDTO> childDTOs = comment.getChildren().stream()
+                .filter(child -> !child.getDeleted())
+                .map(child -> convertToDTO(child, currentMember))
+                .toList();
+
         return CommentResponseDTO.builder()
                 .commentId(comment.getCommentId())
                 .content(comment.getContent())
@@ -172,6 +194,7 @@ public class BoardCommentImpl implements BoardCommentService{
                 .nickname(comment.getMember().getNickname())
                 .isAuthor(isAuthor)
                 .isLikedByCurrentUser(isLiked)
+                .children(childDTOs)
                 .build();
     }
 
